Code Commit: .env Added

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #Cloud Section
 
 DEFAULT_KEY_ID=YOUR_DEFAULT_KEY_ID
-#REGION=us-west-2 
+#REGION=SET_AWS_REGION
 
 # If you are using Azure Cloud Infrastructure otherwise comment the section.
 AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
