Code Commit : Add Wallet id from the .env

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
 CLIENT_ID=YOUR_SDK_CLIENT_ID
 CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
 
+WALLET_ID=YOUR_WALLET_ID
+
