--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "incremental": true,
     "target": "es2017",
     "outDir": "./dist",
-    "rootDir": "Src",
+    "rootDir": "src",
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
