--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:ga": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Withdrawal/GenerateAddressIndex.ts",
-    "start": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Withdrawal/Index.ts",
-    "debug": "ts-node-dev --inspect=4319 --pretty --transpile-only ./src/Examples/Withdrawal/Index.ts",
+    "start:gw": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Withdrawal/GenerateWalletExample.ts",
+    "start:st": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Withdrawal/SendTransactionExample.ts",
     "build": "tsc -p tsconfig.json"
   },
   "keywords": [],
@@ -19,7 +18,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "^1.0.14-Alpha-1",
+    "@lmnl/liminaljs": "^1.0.14-Alpha-3",
     "dotenv": "^10.0.0",
     "guid-typescript": "^1.0.9"
   }
