Code Commit : Consoldidate Transaction

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
 
 WALLET_ID=YOUR_WALLET_ID
 
+
+#TSM Credentials
+
+TSM_URL=YOUR_TSM_URL
+TSM_USER_ID=YOUR_TSM_USER_ID
+TSM_PASSWORD=YOUR_TSM_PASSWORD
+TSM_PUBLIC_KEY=YOUR_TSM_PUBLIC_KEY
