Code Commit : Added Generate MPC KEY Id and Generate Address Script

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 #Cloud Section
 
 DEFAULT_KEY_ID=YOUR_DEFAULT_KEY_ID
-#REGION=SET_AWS_REGION
+REGION=SET_AWS_REGION
 
 # If you are using Azure Cloud Infrastructure otherwise comment the section.
-AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
+#AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
 
 
 #SDK Key
@@ -12,7 +12,9 @@ AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
 CLIENT_ID=YOUR_SDK_CLIENT_ID
 CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
 
+# Wallet 
 WALLET_ID=YOUR_WALLET_ID
+DEPOSIT_WALLET_ID=YOUR_DEPOSIT_WALLET_ID
 
 
 #TSM Credentials
@@ -21,3 +23,8 @@ TSM_URL=YOUR_TSM_URL
 TSM_USER_ID=YOUR_TSM_USER_ID
 TSM_PASSWORD=YOUR_TSM_PASSWORD
 TSM_PUBLIC_KEY=YOUR_TSM_PUBLIC_KEY
+
+
+TARGET_ADDRESS=YOUR_TARGET_ADDRESS
+
+CONSOLIDATE_TRANSACTION_INTERVAL_IN_HOURS=INTERVAL
