--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.0.0",
+  "version": "1.2.0-Beta-1",
   "description": "",
   "main": "index.js",
   "scripts": {
