Code Commit : Example_1.2.0-beta-4

--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@ ENVIRONMENT=test
 
 #Cloud Section
 
-DEFAULT_KEY_ID=YOUR_DEFAULT_KEY_ID
-REGION=SET_AWS_REGION
+#provider name (AWS | AZURE | MPC)
+PROVIDER_NAME=AWS
+DEFAULT_KEY_ID=mrk-705c0178ca974624820aafe15f5fc6b6
+REGION=us-west-2 
 
 # If you are using Azure Cloud Infrastructure otherwise comment the section.
 #AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
@@ -13,11 +15,11 @@ REGION=SET_AWS_REGION
 
 #SDK Key
 
-CLIENT_ID=YOUR_SDK_CLIENT_ID
-CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
+CLIENT_ID=UT3DKwJuEf1L5LiDU7jkwnhE16JU3NKu
+CLIENT_SECRET_ID=8iG3uHw2NNAZ6-akBDrfArHk2zDb0Gp7tR8fe303HmgZuGdO6Y49vnua7LRPsh_r
 
 # Wallet 
-WALLET_ID=YOUR_WALLET_ID
+WITHDRAWAL_WALLET_ID=YOUR_WITHDRAWAL_WALLET_ID
 DEPOSIT_WALLET_ID=YOUR_DEPOSIT_WALLET_ID
 
 
