Code Commit : .env updated

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ ENVIRONMENT=test
 #Cloud Section
 
 #provider name (AWS | AZURE | MPC)
-PROVIDER_NAME=AWS
-DEFAULT_KEY_ID=mrk-705c0178ca974624820aafe15f5fc6b6
-REGION=us-west-2 
+PROVIDER_NAME=CLOUD_PROVIDER_NAME
+DEFAULT_KEY_ID=YOUR_DEFAULT_KEY_ID
+REGION=SET_AWS_REGION
 
 # If you are using Azure Cloud Infrastructure otherwise comment the section.
 #AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
@@ -15,8 +15,8 @@ REGION=us-west-2
 
 #SDK Key
 
-CLIENT_ID=UT3DKwJuEf1L5LiDU7jkwnhE16JU3NKu
-CLIENT_SECRET_ID=8iG3uHw2NNAZ6-akBDrfArHk2zDb0Gp7tR8fe303HmgZuGdO6Y49vnua7LRPsh_r
+CLIENT_ID=YOUR_SDK_CLIENT_ID
+CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
 
 # Wallet 
 WITHDRAWAL_WALLET_ID=YOUR_WITHDRAWAL_WALLET_ID
