--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ TSM_PASSWORD=YOUR_TSM_PASSWORD
 TSM_PUBLIC_KEY=YOUR_TSM_PUBLIC_KEY
 TARGET_ADDRESS=YOUR_TARGET_ADDRESS
 CONSOLIDATE_TRANSACTION_INTERVAL_IN_HOURS=INTERVAL
+CO_SIGNERS_EMAILID=YOUR_CO_SIGNERS_EMAILID
