Code Commit : Continue Wallet Confirm Prompt added + check .env data + change KSM to KMS message

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-ENVIRONMENT=YOUR_ENVIRONMENT
-PROVIDER_NAME=YOUR_CLOUD_PROVIDER_NAME
-DEFAULT_KEY_ID=YOUR_KMS_DEFAULT_KEY_ID
-REGION=YOUR_AWS_REGION
-CLIENT_ID=YOUR_SDK_CLIENT_ID
-CLIENT_SECRET_ID=YOUR_SDK_CLIENT_SECRET_ID
-WITHDRAWAL_WALLET_ID=YOUR_WITHDRAWAL_WALLETID
+ENVIRONMENT=test
+PROVIDER_NAME=AWS
+DEFAULT_KEY_ID=mrk-98f2449ecb9e408f8bd822d553bd7c1b
+REGION=ap-south-1
+CLIENT_ID=UT3DKwJuEf1L5LiDU7jkwnhE16JU3NKu
+CLIENT_SECRET_ID=8iG3uHw2NNAZ6-akBDrfArHk2zDb0Gp7tR8fe303HmgZuGdO6Y49vnua7LRPsh_r
+WITHDRAWAL_WALLET_ID=2804
 DEPOSIT_WALLET_ID=YOUR_DEPOSIT_WALLET_ID
 TSM_URL=YOUR_TSM_URL
 TSM_USER_ID=YOUR_TSM_USER_ID
