Code Commit: Azure CLI added

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ TSM_PUBLIC_KEY=YOUR_TSM_PUBLIC_KEY
 TARGET_ADDRESS=YOUR_TARGET_ADDRESS
 CONSOLIDATE_TRANSACTION_INTERVAL_IN_HOURS=INTERVAL
 CO_SIGNERS_EMAILID=YOUR_CO_SIGNERS_EMAILID
+AZURE_KEY_VAULT_URL=YOUR_AZURE_KEY_VAULT_URL
