--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "start:start:tfg": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/GnosisData/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
-    "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
+    "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts",
+    "start:dev": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Playground.ts"
   },
   "keywords": [],
   "author": "",
@@ -62,7 +63,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "^1.3.0-beta-0",
+    "@lmnl/liminaljs": "^1.3.0",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
