--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts",
-    "start:dev": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Playground.ts"
+    "start:dev": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Playground.ts",
+    "wallet:list": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/ListWallets.ts"
   },
   "keywords": [],
   "author": "",
