--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "start:gab": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/ByAddress/Index.ts",
     "start:gabp": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/Pagination/Index.ts",
     "start:glw": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetListOfWallets/Index.ts",
-    "start:start:gtlp": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetTransfers/ListOfTransfers/Index.ts",
-    "start:start:gt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetTransfers/Transfers/Index.ts",
-    "start:start:gwd": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetWalletData/Index.ts",
-    "start:start:prt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/ColdRefill/GetWalletDataPushRefillTransaction/Index.ts",
-    "start:start:ts": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/TransactionStatus/Index.ts",
-    "start:start:re": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/ResendTransaction/Index.ts",
-    "start:start:tfnc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/NativeCoin/Index.ts",
-    "start:start:tft": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/Token/Index.ts",
-    "start:start:tfg": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/GnosisData/Index.ts",
+    "start:gtlp": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetTransfers/ListOfTransfers/Index.ts",
+    "start:gt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetTransfers/Transfers/Index.ts",
+    "start:gwd": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetWalletData/Index.ts",
+    "start:prt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/ColdRefill/GetWalletDataPushRefillTransaction/Index.ts",
+    "start:ts": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/TransactionStatus/Index.ts",
+    "start:re": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/ResendTransaction/Index.ts",
+    "start:tfnc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/NativeCoin/Index.ts",
+    "start:tft": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/Token/Index.ts",
+    "start:tfg": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransfersFunds/GnosisData/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
