Code Commit : Liminal Sample Updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.3.0-beta-13",
+  "version": "1.3.0-beta-16",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,21 +9,21 @@
     "start:aws-configure": "aws configure",
     "start:azure-configure": "az login",
     "start:mpc-setup": "./src/Cli/mpc/install.sh",
-    "start:st": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Withdrawal/SendTransactionExample.ts",
-    "start:mpc-key": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Deposit/GenerateMPCKeyIdExample.ts",
-    "start:ga": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Deposit/GenerateAddressExample.ts",
-    "start:ct": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Deposit/ConsolidateTransactionEVMExample.ts",
-    "start:psk-aws": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Initialize/GenerateSignerPublicKey/AWS/GetSignerPublicKeysExample.ts",
-    "start:psk-mpc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Initialize/GenerateSignerPublicKey/MPC/GetSignerPublicKeysExample.ts",
+    "start:st": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Demo/Withdrawal/SendTransactionExample.ts",
+    "start:mpc-key": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/GenerateSignerPublicKey/MPC/GenerateMPCKeyIdExample.ts",
+    "start:ga": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Demo/Deposit/GenerateAddressExample.ts",
+    "start:ct": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/Demo/Deposit/ConsolidateTransactionEVMExample.ts",
+    "start:psk-aws": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/GenerateSignerPublicKey/AWS/GetSignerPublicKeysExample.ts",
+    "start:psk-mpc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/GenerateSignerPublicKey/MPC/GetSignerPublicKeysExample.ts",
     "start:af": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/ApproxFeeRate/Index.ts",
     "start:block-utxo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/BlockUTXO/Index.ts",
     "start:unblock-utxo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/UnBlockUTXO/Index.ts",
-    "start:ct-evm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/EVM/Index.ts",
-    "start:ct-tron": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/TRON/Index.ts",
+    "start:ct-evm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/NonUTXO/Index.ts",
     "start:ct-utxo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/UTXO/Index.ts",
     "start:fo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/FanoutUnspentTransaction/Index.ts",
     "start:ga-deposit": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/GenerateAddress/Index.ts",
-    "start:gwb": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetBalance/Index.ts",
+    "start:gwb": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetBalance/NativeCoin/Index.ts",
+    "start:gtb": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetBalance/Token/Index.ts",
     "start:gab": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/ByAddress/Index.ts",
     "start:gabp": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/Pagination/Index.ts",
     "start:glw": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetListOfWallets/Index.ts",
@@ -65,7 +65,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "1.3.0-beta-13",
+    "@lmnl/liminaljs": "^1.3.0-beta-19",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
