--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start:tft": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransferFunds/Token/Index.ts",
     "start:tfg": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransferFunds/GnosisData/Index.ts",
     "start:dst": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/DataTransaction/EVM/Index.ts",
+    "start:tfnc-mpc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransferFunds/MPC/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
@@ -62,7 +63,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "^1.3.0-beta-19",
+    "@lmnl/liminaljs": "1.3.0-beta-22",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
