--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "^1.3.0-beta-23",
+    "@lmnl/liminaljs": "1.3.0-beta-23",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
