--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.3.0-beta-22",
+  "version": "1.3.0-beta-23",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -40,8 +40,7 @@
     "start:auth": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Auth/Index.ts",
     "start:stn": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/SingleTransaction/NativeCoin/Index.ts",
     "start:stt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/SingleTransaction/Token/Index.ts",
-    "start:std-mpc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/MPC/Index.ts",
-    "start:std-aws": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/AWS/Index.ts",
+    "start:stdevm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/EVM/Index.ts",
     "start:gabt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/Token/ByAddress/Index.ts",
     "start:gabpt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetAddressBalance/Token/Pagination/Index.ts",
     "start:pts": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Common/GetPendingTransaction/BySequenceId/Index.ts",
