--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "start:ptp": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetPendingTransaction/Pagination/Index.ts",
     "start:wnc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Wallet/NativeCoin/Index.ts",
     "start:wt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Wallet/Token/Index.ts",
+    "start:aml":"ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetAML/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
@@ -73,7 +74,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "1.3.0-beta-25",
+    "@lmnl/liminaljs": "1.3.0-beta-26",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
