--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.3.0-beta-28",
+  "version": "1.3.0-beta-30",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "start:ct-evm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/NonUTXO/Index.ts",
     "start:ct-utxo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/UTXO/Index.ts",
     "start:fo": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/FanoutUnspentTransaction/Index.ts",
-    "start:ga-deposit": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/GenerateAddress/Index.ts",
+    "start:ga-deposit": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/GenerateAddress/SingleAddress/Index.ts",
     "start:gwb": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetBalance/NativeCoin/Index.ts",
     "start:gtb": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetBalance/Token/Index.ts",
     "start:gab": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetAddressBalance/NativeCoin/ByAddress/Index.ts",
@@ -48,6 +48,7 @@
     "start:wnc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Wallet/NativeCoin/Index.ts",
     "start:wt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Wallet/Token/Index.ts",
     "start:aml": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetAML/Index.ts",
+    "start:gam-deposit": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/GenerateAddress/ManyAddress/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
@@ -74,7 +75,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "1.3.0-beta-28",
+    "@lmnl/liminaljs": "^1.3.0-beta-30",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
