--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.3.0-beta-31",
+  "version": "1.3.0-beta-34",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -40,7 +40,7 @@
     "start:auth": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Initialize/Auth/Index.ts",
     "start:stn": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/ByFromAddress/NativeCoin/Index.ts",
     "start:stt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/ByFromAddress/Token/Index.ts",
-    "start:stdevm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/EVM/Index.ts",
+    "start:stdevm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/EVM/NativeCoin/Index.ts",
     "start:gabt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetAddressBalance/Token/ByAddress/Index.ts",
     "start:gabpt": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetAddressBalance/Token/Pagination/Index.ts",
     "start:pts": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Views/GetPendingTransaction/BySequenceId/Index.ts",
@@ -51,6 +51,7 @@
     "start:gam-deposit": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/GenerateAddress/ManyAddress/Index.ts",
     "start:ct-tk": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/ConsolidatedTransaction/NonUTXO/Token/Index.ts",
     "start:tft-mpc": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Withdrawal/TransferFunds/MPC/Token/Index.ts",
+    "start:stdtevm": "ts-node-dev --respawn --pretty --transpile-only ./src/Examples/SDK-Features-Samples/Deposit/TransferFunds/EVM/Token/Index.ts",
     "debug:cli": "ts-node-dev --inspect=4320 --pretty --transpile-only ./src/Cli/Index.ts",
     "build": "tsc -p tsconfig.json",
     "reset:env": "ts-node-dev --respawn --pretty --transpile-only ./src/Cli/Shared/ResetEnvFile.ts"
@@ -77,7 +78,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "1.3.0-beta-32",
+    "@lmnl/liminaljs": "1.3.0-beta-34",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
