--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lmnl/liminaljs-typescript",
-  "version": "1.4.0",
+  "version": "1.4.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -78,7 +78,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "^1.5.0-beta-1",
+    "@lmnl/liminaljs": "1.4.2",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
