--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@lmnl/liminaljs": "1.4.2",
+    "@lmnl/liminaljs": "1.6.0-dev-1",
     "@types/cli-color": "^2.0.2",
     "cli-progress": "^3.11.2",
     "inquirer": "^8.2.4"
